--- a/Module_2_Coding_Assignment/CSS/Assign2.css
+++ b/Module_2_Coding_Assignment/CSS/Assign2.css
@@ -16,6 +16,7 @@ section {
         height: 160px;
         margin-right:auto ;
         margin-left:auto ;
+        margin-bottom: 5px;
         background-color: #999999;
         font-family: Helvetica;
         color: black;
