--- a/Module_2_Coding_Assignment/CSS/Assign2.css
+++ b/Module_2_Coding_Assignment/CSS/Assign2.css
@@ -12,11 +12,11 @@ h1 {
 section {
         position: relative; 
         border: 1px solid black;  
-        width: 100%;
+        width: 95%;
         height: 160px;
-        margin-right:auto ;
-        margin-left:auto ;
-        margin-bottom: 5px;
+        margin-right:0px ;
+        margin-left:0px ;
+        margin-bottom: 16px;
         background-color: #999999;
         font-family: Helvetica;
         color: black;
@@ -123,7 +123,7 @@ section {
     width: 91.66%;
   }
   .col-md-12 {
-    width: 100%;
+    width: 103%;
   }
 }
 
